--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "targets/jonchki/install/bam",
+            "command": "mbs/mbs",
             "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
@@ -14,7 +14,7 @@
         {
             "label": "clean",
             "type": "shell",
-            "command": "targets/jonchki/install/bam -c",
+            "command": "mbs/mbs -c",
             "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
