--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -24,7 +24,7 @@
         {
             "label": "generate debug infos",
             "type": "shell",
-            "command": "mbs/mbs --debug-nodes-html >targets/debug.html",
+            "command": "mbs2/mbs --debug-nodes-html >targets/debug.html",
             "problemMatcher": "$gcc",
             "group": {
                 "kind": "build",
